# drivestudio

./: .gitignore  .gitmodules  EXPERIMENT_LOG.md  INSTALL_UV.md  NEXT_STEPS.md  OMNIRE_PLAN.md  README.md  pyproject.toml  test_phase4_imports.py
configs/datasets/waymo/: 1cams.yaml  3cams.yaml
datasets/base/: pixel_source.py
docs/: Waymo.md
models/gaussians/: basics.py
paper/: 3DGS-VRAM-Analysis-with-Citations.md  3DGS-VRAM-Analysis.md  3DGUT-vs-OmniRe-Comparison.md  DeformableGS-Parameters-Analysis.md  OmniRe-Parameters-Analysis.md
paper/3dgut/: 3dgut-original.md  3dgut-summary-ja.md
paper/deformable-gs/: deformable-gs-original.md  deformable-gs-summary-ja.md
paper/ominire/: omnire-original.md  omnire-summary-ja.md
plan/: DEFORMABLE_GS_PLAN.md  REBUILD_PLAN.md  SETUP_PLAN.md  UV_MIGRATION_PLAN.md
scripts/: test_phase1_pytorch.py  test_phase2_gsplat.py  test_phase2_imports.py
